--- a/public/pages/sign-in.html
+++ b/public/pages/sign-in.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
@@ -13,22 +14,23 @@
 
     <form>
         <div style="margin-bottom: 10px;">
-            <label for="username">
-                <span>Username: </span>
-                <input type="text" id="username" name="username" required>
+            <label for="username-or-email">
+                <span>ชื่อผู้ใช้งานหรืออีเมล: </span>
+                <input type="text" id="username-or-email" name="username-or-email"
+                    placeholder="กรอกชื่อผู้ใช้งาน หรือ email" required>
             </label>
         </div>
         <div style="margin-bottom: 20px;">
             <label for="password">
-                <span>Password: </span>
-                <input type="password" id="password" name="password" required>
+                <span>รหัสผ่าน: </span>
+                <input type="password" id="password" name="password" placeholder="กรอกรหัสผ่าน" required>
             </label>
         </div>
-        <button type="submit">Sign In</button>
+        <button type="submit">เข้าสู่ระบบ</button>
     </form>
 
     <div style="margin-top: 20px;" class="sign-up">
-        <a href="http://localhost:3000/sign-up.html">สมัครผู้ใช้งาน</a>
+        <a href="http://localhost:3000/pages/sign-up.html">สมัครผู้ใช้งาน</a>
     </div>
 
     <div class="loading" style="display: none;">กำลังเข้าสู่ระบบ ...</div>
@@ -41,16 +43,16 @@
             document.querySelector(".sign-up").style.display = "none";
             document.querySelector(".loading").style.display = "block";
             setTimeout(() => {
-                location.href = "http://localhost:3000/user-info.html";
+                location.href = "http://localhost:3000/pages/user-info.html";
             }, 3500);
         }
 
         document.querySelector("form").addEventListener("submit", async (e) => {
             e.preventDefault();
 
-            const username = document.querySelector("#username").value.trim();
+            const usernameOrEmail = document.querySelector("#username-or-email").value.trim();
             const password = document.querySelector("#password").value.trim();
-            const payload = { username, password, userId: localStorage.getItem("userId") };
+            const payload = { username: usernameOrEmail, password, email: usernameOrEmail };
 
             try {
                 const response = await fetch(apiEndpoint, {
@@ -65,9 +67,11 @@
                 if (response.status === 200) {
                     localStorage.setItem("token", data.token);
                     redirect();
+                } else {
+                    throw new Error(data?.message);
                 }
             } catch (err) {
-                alert(err?.message);
+                alert(err);
             }
         });
 
@@ -95,6 +99,7 @@
             }
         })();
     </script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 </body>
 
 </html>
