--- a/public/pages/successfully.html
+++ b/public/pages/successfully.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Success</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
+
 <body>
     <h1 style="color: green;">ลงทะเบียนสำเร็จ</h1>
     <button style="margin-block: 10px;">กลับไปที่หน้า Sign In</button>
 
     <script type="module">
         document.querySelector("button").addEventListener("click", () => {
-            location.href = "http://localhost:3000/sign-in.html";
+            location.href = "http://localhost:3000/pages/sign-in.html";
         })
     </script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 </body>
+
 </html>
