--- a/public/pages/user-info.html
+++ b/public/pages/user-info.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>หน้าผู้ใช้งาน</title>
+    <title>User Information</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
@@ -15,8 +16,9 @@
     <div class="container">
         <h1>รายละเอียดข้อมูลผู้ใช้งาน</h1>
         <div>
-            <p>Username: <span class="show-username"></span></p>
-            <p>Email: <span class="show-email"></span></p>
+            <p>ชื่อผู้ใช้งาน: <span class="show-username"></span></p>
+            <p>อีเมล: <span class="show-email"></span></p>
+            <p>รหัส id ผู้ใช้งาน: <span class="show-id"></span></p>
         </div>
 
         <div>
@@ -37,13 +39,13 @@
     <form style="margin-top: 40px; display: none;">
         <div>
             <label for="username">
-                <span>Username: </span>
+                <span>ชื่อผู้ใช้งาน: </span>
                 <input type="text" id="username" name="username" required>
             </label>
         </div>
         <div>
             <label for="email">
-                <span>Email: </span>
+                <span>อีเมล: </span>
                 <input type="email" id="email" name="email" required>
             </label>
         </div>
@@ -51,10 +53,14 @@
     </form>
 
     <script type="module">
-        const user = {};
+        const user = { username: null, email: null, userId: null };
+
+        const redirect = () => {
+            location.href = "http://localhost:3000/pages/sign-in.html";
+        }
 
         (async () => {
-            if (!localStorage.getItem("token") && !localStorage.getItem("userId")) {
+            if (!localStorage.getItem("token")) {
                 document.querySelector(".error").style.display = "block";
                 document.querySelector(".container").style.display = "none";
                 return;
@@ -78,8 +84,10 @@
                 if (response.status === 200) {
                     user.username = data.username;
                     user.email = data.email;
+                    user.userId = data.userId;
                     document.querySelector(".show-username").textContent = user.username;
                     document.querySelector(".show-email").textContent = user.email;
+                    document.querySelector(".show-id").textContent = user.userId;
                     document.querySelector(".loading").style.display = "none";
                     document.querySelector(".container").style.display = "block";
                     return;
@@ -103,8 +111,7 @@
 
         const logout = async () => {
             localStorage.removeItem("token");
-            localStorage.removeItem("userId");
-            location.href = "http://localhost:3000/sign-in.html";
+            redirect();
         }
 
         const editUserData = async () => {
@@ -114,10 +121,34 @@
             document.querySelector("#email").value = user.email;
         }
 
+        const deleteUserAccount = async () => {
+            const token = localStorage.getItem("token");
+            
+            try {
+                const response = await fetch(`http://localhost:3000/api/user/delete/${user.userId}`, {
+                    method: "DELETE",
+                    headers: {
+                        "Content-Type": "application/json",
+                        Authorization: `Bearer ${token}`
+                    }
+                });
+
+                if (response.status === 200){
+                    alert("ลบบัญชีผู้ใช้งานสำเร็จ");
+                    logout();
+                }
+            } catch (e) {
+                console.error(e);
+                alert(e?.message);
+            }
+        }
+
         document.querySelector(".btn-create").addEventListener("click", createApiKey, { once: true });
         document.querySelector(".btn-edit").addEventListener("click", editUserData);
         document.querySelector(".btn-logout").addEventListener("click", logout);
+        document.querySelector(".btn-delete").addEventListener("click", deleteUserAccount);
     </script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 </body>
 
 </html>
