--- a/public/pages/successfully.html
+++ b/public/pages/successfully.html
@@ -14,7 +14,7 @@
 
     <script type="module">
         document.querySelector("button").addEventListener("click", () => {
-            location.href = "http://localhost:3000/pages/sign-in.html";
+            location.href = "./sign-in.html";
         })
     </script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
