--- a/public/pages/sign-in.html
+++ b/public/pages/sign-in.html
@@ -36,7 +36,7 @@
     <div class="loading" style="display: none;">กำลังเข้าสู่ระบบ ...</div>
 
     <script type="module">
-        const apiEndpoint = "http://localhost:3000/sign-in";
+        const apiEndpoint = "https://developerthai-api.onrender.com/sign-in";
 
         const redirect = () => {
             document.querySelector("form").style.display = "none";
@@ -99,7 +99,6 @@
             }
         })();
     </script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 </body>
 
 </html>
