--- a/public/pages/sign-up.html
+++ b/public/pages/sign-up.html
@@ -57,7 +57,7 @@
                 if (password === confirmPaasword) {
                     const data = { username, email, password };
 
-                    const response = await fetch("http://localhost:3000/sign-up", {
+                    const response = await fetch("https://developerthai-api.onrender.com/sign-up", {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json"
@@ -82,7 +82,6 @@
             }
         });
     </script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 </body>
 
 </html>
