--- a/public/pages/user-info.html
+++ b/public/pages/user-info.html
@@ -69,7 +69,7 @@
         const user = { username: null, email: null, userId: null, apiKey: null };
 
         const redirect = () => {
-            location.href = "http://localhost:3000/pages/sign-in.html";
+            location.href = "./sign-in.html";
         }
 
         (async () => {
@@ -85,7 +85,7 @@
             try {
                 const token = localStorage.getItem("token");
 
-                const response = await fetch("http://localhost:3000/api/user/data", {
+                const response = await fetch("https://developerthai-api.onrender.com/api/user/data", {
                     method: "GET",
                     headers: {
                         "Content-Type": "application/json",
@@ -130,7 +130,7 @@
             const token = localStorage.getItem("token");
 
             try {
-                const response = await fetch("http://localhost:3000/api/user/api-key", {
+                const response = await fetch("https://developerthai-api.onrender.com/api/user/api-key", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
@@ -182,7 +182,7 @@
             const token = localStorage.getItem("token");
 
             try {
-                const response = await fetch(`http://localhost:3000/api/users/update/${user.userId}`, {
+                const response = await fetch(`https://developerthai-api.onrender.com/api/users/update/${user.userId}`, {
                     method: "PUT",
                     headers: {
                         "Content-Type": "application/json",
@@ -220,7 +220,7 @@
             const token = localStorage.getItem("token");
 
             try {
-                const response = await fetch(`http://localhost:3000/api/users/update/${user.userId}/password`, {
+                const response = await fetch(`https://developerthai-api.onrender.com/api/users/update/${user.userId}/password`, {
                     method: "PATCH",
                     headers: {
                         "Content-Type": "application/json",
@@ -253,7 +253,7 @@
             }
 
             try {
-                const response = await fetch(`http://localhost:3000/api/users/delete/${user.userId}`, {
+                const response = await fetch(`https://developerthai-api.onrender.com/api/users/delete/${user.userId}`, {
                     method: "DELETE",
                     headers: {
                         "Content-Type": "application/json",
@@ -279,7 +279,6 @@
         document.querySelector(".btn-logout").addEventListener("click", logout);
         document.querySelector(".btn-delete").addEventListener("click", deleteUserAccount);
     </script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 </body>
 
 </html>
